<resources>
    <string name="AWS_AUTHOR_REGION">us-west-2</string>
    <string name="AWS_BUKET_NAME">gpcshowtime</string>
    <string name="AWS_DEVELOPER_PROVIDER_SERVER">https://share.pubgameshowtime.com/picshare/getToken.php</string>
    <string name="AWS_POOL_ID">us-west-2:5f820c96-bc0a-4533-aa17-96a243ed0d44</string>
    <string name="AWS_REGION">us-west-1</string>
    <string name="AWS_SUB_FOLDER">images/igshare{TIME_STAMP}{OPENID}</string>
    <string name="CDN_PATH_CONF">https://cdn.pubgameshowtime.com/{FILE_PATH}</string>
    <string name="DEVELOPER_PROVIDER">com.tencent.ig</string>
    <string name="StartUpDontAskAgainCancel">Cancel</string>
    <string name="StartUpDontAskAgainSetting">Setting</string>
    <string name="StartUpDontAskAgainTips">Need go to setting interface to enable the relevant permissions before use this function.</string>
    <string name="StartUpExternalStorageOK">OK</string>
    <string name="StartUpExternalStorageTips">&lt;b&gt;Permission Requested:&lt;/b&gt;&lt;br /&gt;Battlegrounds Mobile India is requesting storage permissions to save game data.</string>
    <string name="StartUpRejectExternalStorageNo">Deny</string>
    <string name="StartUpRejectExternalStorageTips">&lt;b&gt;Please note:&lt;/b&gt;&lt;br /&gt;Storage permission is only used in storing game data for the game to function properly. Other files on your device will not be accessed.&lt;br /&gt;&lt;br /&gt;Select Allow to see the pop-up window again.</string>
    <string name="StartUpRejectExternalStorageYes">Allow</string>
    <string name="TWITTER_CONSUMER_KEY">jYJwcCjUqsu7l+K1q8vyHsXR3G9IrFb28My30caBneY=</string>
    <string name="TWITTER_CONSUMER_SECRET">RTIgksfSwH4NLFnNHTBFWg0F+dZoQGV9ioYsZUqg3r4nW7u0E0cC3re82r1l9XzjbxnnRe1Z5VfXzSJj10IjzQ==</string>
    <string name="UPLOAD_TIME_OUT">30</string>
    <string name="UploadTimeOut">30</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adjust_url_strategy">url_strategy_india</string>
    <string name="app_id">646362697320</string>
    <string name="app_name">Battlegrounds India</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_me_about">Master tips</string>
    <string name="back">回到游戏</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_history_no_more">No more message</string>
    <string name="chat_history_text">Release to view more</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">确定</string>
    <string name="copy_sucsess">已复制到剪切板</string>
    <string name="copylink">复制链接地址</string>
    <string name="default_web_client_id">646362697320-ng2m2uj8a53arsiqgk7btc3bq9ia3rep.apps.googleusercontent.com</string>
    <string name="detail_pin">PUBG MOBILE</string>
    <string name="detail_trends">TRENDS</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fav">收藏页面</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feeds_close">Close</string>
    <string name="fitscreen">适应屏幕</string>
    <string name="form_commit_btn">SUBMIT MY CASE</string>
    <string name="form_entrance">CONTACT US</string>
    <string name="form_info_commit_fail">You have 1 case in progress. Thank you for your patience.</string>
    <string name="form_info_commit_succ">Hi there, your question has been submitted. We will reply as soon as possible. Thank you for your patience and have a nice day!</string>
    <string name="form_upload_desc">Click to upload</string>
    <string name="gcloud_config_url">https://in-cloudctrl.globh.com</string>
    <string name="gcloud_game_id">1002112598</string>
    <string name="gcloud_game_key">a1444f8251dae4161f47c8b884e1c25c</string>
    <string name="gcm_defaultSenderId">646362697320</string>
    <string name="gift_receive">Collect</string>
    <string name="google_api_key">AIzaSyDbj7yQgLhCjsMH9fqWgXPT8EZJFaFWDKM</string>
    <string name="google_app_id">1:646362697320:android:f4ab20250d67fccf52b5dd</string>
    <string name="google_crash_reporting_api_key">AIzaSyDbj7yQgLhCjsMH9fqWgXPT8EZJFaFWDKM</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hot">HOT</string>
    <string name="hs__agent_message_voice_over">Message from support on %1$s</string>
    <string name="hs__agent_message_with_name_voice_over">Message from support by %1$s on %2$s</string>
    <string name="hs__app_review_button">REVIEW</string>
    <string name="hs__csat_dislike_message">Hated it</string>
    <string name="hs__csat_like_message">Loved it</string>
    <string name="hs__csat_message">What\'s your feedback about our customer support?</string>
    <string name="hs__csat_option_message">or</string>
    <string name="hs__csat_ratingbar">Please rate our service.</string>
    <string name="hs__messages_loading_error_text">Couldn\'t Load Messages.</string>
    <string name="hs__messages_loading_text">Loading Messages..</string>
    <string name="hs__tap_to_retry">Tap to retry.</string>
    <string name="imsdk_webview_back">go back</string>
    <string name="imsdk_webview_close">close</string>
    <string name="imsdk_webview_forward">forward</string>
    <string name="imsdk_webview_share">share</string>
    <string name="toolbar_tag_land_show">false</string>
    <string name="unipay_cancel">Cancel</string>
    <string name="unipay_dlg_tip">Friendly Reminder</string>
    <string name="unipay_error">Error</string>
    <string name="unipay_sure">Confirm</string>
    <string name="unipay_try_again">Please try again later.</string>
</resources>