<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/unipay_abroad_wrap">
    <View style="@style/unipay_abroad_fill.bg"/>
    <LinearLayout style="@style/unipay_dialog">
        <ImageView style="@style/unipay_abroad_wrap.iconfail"/>
        <TextView
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:text="@string/unipay_error"
            style="@style/unipay_abroad_text.em"/>
        <TextView
            android:textSize="@dimen/unipay_abroad_size1"
            android:text="@string/unipay_try_again"
            style="@style/unipay_abroad_text.em"/>
        <LinearLayout style="@style/unipay_abroad_btn_wrap">
            <Button
                android:text="@string/unipay_cancel"
                style="@style/unipay_abroad_btn_cancel_style"/>
            <Button
                android:text="@string/unipay_sure"
                style="@style/unipay_abroad_btn_ok_style"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
