<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.helpshift.views.HSTextView
        android:textSize="@dimen/hs__textSizeMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:gravity="center_horizontal"
        android:id="@+id/csat_message"
        android:paddingLeft="@dimen/activity_horizontal_margin_medium"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_horizontal_margin_medium"
        android:paddingBottom="@dimen/activity_horizontal_margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hs__csat_message"
        android:layout_centerHorizontal="true"/>
    <RatingBar
        android:id="@+id/ratingBar"
        android:paddingTop="@dimen/activity_vertical_margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:layout_below="@+id/csat_message"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hs__csat_ratingbar"
        style="@style/Helpshift.Style.RatingBar"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/csat_msg_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar">
        <com.helpshift.views.HSTextView
            android:textSize="@dimen/hs__textSizeSmall"
            android:textColor="?android:attr/textColorHint"
            android:gravity="start"
            android:id="@+id/csat_like_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hs__csat_dislike_message"
            android:layout_weight="1"/>
        <View
            android:layout_width="4dp"
            android:layout_height="1dp"/>
        <com.helpshift.views.HSTextView
            android:textSize="@dimen/hs__textSizeSmall"
            android:textColor="?android:attr/textColorHint"
            android:gravity="end"
            android:id="@+id/csat_dislike_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hs__csat_like_message"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_medium"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/csat_msg_container">
        <View
            android:background="?attr/hs__separatorColor"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <com.helpshift.views.HSTextView
            android:id="@+id/hs__csat_option"
            android:paddingLeft="@dimen/activity_horizontal_margin_small"
            android:paddingRight="@dimen/activity_horizontal_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hs__csat_option_message"/>
        <View
            android:id="@+id/option_text"
            android:background="?attr/hs__separatorColor"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
